tests/baselines/reference/inheritanceMemberPropertyOverridingMethod(strict=true).errors.txt
inheritanceMemberPropertyOverridingMethod.ts(8,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.


==== inheritanceMemberPropertyOverridingMethod.ts (1 errors) ====
    class a {
        x() {
            return "20";
        }
    }
    
    class b extends a {
        x: () => string;
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    }